turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:20: error: expected class or object definition
  val c=getCouleurSol()
  ^Turmite:21: error: expected class or object definition
  val ci=posi(c,colors)
  ^Turmite:22: error: expected class or object definition
  if (rule(ci)=='R') {droite()} else {left()}
  ^Turmite:23: error: expected class or object definition
  if (ci==colors.length-1) {colorie(colors(0))} else {colorie (colors(ci+1))}
  ^Turmite:24: error: expected class or object definition
  avance()
  ^Turmite:25: error: Unmatched closing brace '}' ignored here
}
^Turmite:27: error: expected class or object definition
def colorie (c:Color):Unit={
^Turmite:33: error: expected class or object definition
def posi(c:Color,tab:Array[Color]):Int={
^Turmite:41: error: expected start of definition
	override def run() { 
                 ^Turmite:56: error: Unmatched closing brace '}' ignored here
}
^